tetris-demo/tetris_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: tetris
  namespace: tetris
spec:
  tls:
    - hosts:
        - tetris.lab.qstetten.de
      secretName: tetris-cert
  rules:
    - host: "tetris.lab.qstetten.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tetris
                port:
                  number: 80
